# axiom-public

./: .gitignore  1GETTING_STARTED.md  ARCHITECTURE.md  AXIOM_PUBLIC_REPO_BUILD_REPORT.md  AXIOM_RUNABILITY_AUDIT.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE_OVERVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose-debug.yml  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.qdrant.yml  pyproject.toml  sitecustomize.py
.axiom_demo/: demo.sqlite
.github/: PULL_REQUEST_TEMPLATE.md
.venv_core_test/: pyvenv.cfg
apps/: agent_cli.py  run_demo.sh
axiom_boot/: memory.boot_incomplete.json  memory.version_banner.json  resilience.degraded.json
boot/: __init__.py  phases.py  version_banner.py
configs/: .env.example  .env.template
docs/: 1GETTING_STARTED.md  2SYSTEMS_OVERVIEW.md  BELIEF_GOVERNANCE.md  CHAOS_AND_CI.md  CONTEXT_BUDGETS.md  CONTRACTS_V2.md  DATA_LIFECYCLE.md  DEDUPE.md  EMBEDDER_REGISTRY.md  EVENT_SOURCING.md  GOVERNOR_OVERVIEW.md  HYBRID_RETRIEVAL.md  INGEST_WORLD_MAP.md  OUTBOX_PLAYBOOK.md  PROMPT_CONTRACTS.md  QUARANTINE.md  REEMBED_PLAYBOOK.md  REPO_CONTENTS_REPORT.md  RESILIENCE_PLAYBOOK.md  SCHEMA.md  VECTOR_SYNC.md  audit_report.md  axiom_architecture_map.md  belief_confidence_engine.md  belief_engine.md  belief_influence_mapper.md  belief_pressure_mapper.md  belief_propagation_engine.md  belief_registry.md  belief_resolution_engine.md  cognitive_audits.md  composite_scoring_for_axiom.md  contradiction_explainer.md  contradiction_pipeline_phase2.md  contradiction_resolution.md  (+12 more)
(+402 files in other folders)
